#6 App: Add Home page Heading section (above categories) to support - restaurant image and short description, detailed description (expandable).

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,8 @@
 		"menu": "Home",
 		"cart": "My Cart",
 		"orders_list": "History",
-    "loyalty": "Loyalty program"
+    "loyalty": "Loyalty program",
+    "my_account" : "My Account"
 	},
   "loyalty": {
     "heading": "Order From Hot & Grill And Get Rewarded",
