--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,7 @@
 		"stripe": "Stripe",
 		"paypal": "PayPal",
 		"delivery_price": "Delivery price:",
-		"coupon_discount": "Coupon Discount:",
+		"coupon_discount": "Promo Discount:",
 		"total": "Total:",
 		"place_order": "Place Order",
 		"promo_not_found": "Promo code not found",
@@ -55,7 +55,7 @@
 		"payment_error": "Error processing payment",
 		"paypal_error": "Error executing PayPal payment",
 		"tax": "Tax",
-		"total_with_tax": "Total with Tax",
+		"total_with_tax": "Gross Total",
 		"history": "Orders history"
 	},
 	"buttons": {
